# ParticelleBrumBrum

./: .gitignore  CMakeLists.txt  Particle.cpp  Particle.hpp  ParticleType.cpp  ParticleType.hpp  README.md  Relazione.tex  ResonanceType.cpp  ResonanceType.hpp  main.cpp  n  n.pub  particles.test.cpp
main/: CMakeLists.txt  analysis.root  simulations.root
main/dictionary/: Linkdef.h
main/include/: Headers.hpp  Map.hpp  Particle.hpp  ParticleType.hpp  ResonanceType.hpp
main/include/particles/: Headers.hpp  Map.hpp  Particle.hpp  ParticleType.hpp  ResonanceType.hpp
main/src/: .gitignore  Analysis.cpp  Map.cpp  Particle.cpp  ParticleType.cpp  ResonanceType.cpp  Simulation.cpp  main.cpp
project-compilation/: CMakeListsCustom.txt  Configuration.cmake  Flags.cmake  Libraries.cmake  ProgramModules.cmake  Setting.cmake  Targets.cmake
templates/: Headers.hpp.in
tests/: CMakeLists.txt
tests/unit/: CMakeLists.txt  particles.test.cpp
tests/unit/sample/: CMakeLists.txt  sample.test.cpp
tests/unit/testing/: CMakeLists.txt  particles.test.cpp
